--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "yub": "^0.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
