--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
@@ -18,6 +19,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "sort-by": "^0.0.2",
     "yub": "^0.11.1",
