--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-secure-storage": "^1.3.2",
     "sort-by": "^0.0.2",
     "yub": "^0.11.1",
     "yup": "^1.4.0"
